--- a/app/src/main/res/drawable/bg_edit_text_rounded_black.xml
+++ b/app/src/main/res/drawable/bg_edit_text_rounded_black.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="@dimen/_8sdp"
     android:shape="rectangle">
-    <solid android:color="@color/white" />
+    <solid android:color="@color/black" />
     <corners
         android:bottomLeftRadius="@dimen/_12sdp"
         android:bottomRightRadius="@dimen/_12sdp"
