--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Theme.BinarAndroidChapter4Challenge" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.BinarAndroidChapter5Challenge" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/light_green_500</item>
         <item name="colorPrimaryVariant">@color/dark_green_custom</item>
@@ -14,7 +14,15 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="Base.Icon" parent="Theme.BinarAndroidChapter4Challenge">
+    <style name="Base.Icon" parent="Theme.BinarAndroidChapter5Challenge">
         <item name="android:tint">@color/white</item>
+    </style>
+    
+    <style name="Base.Text" parent="Theme.BinarAndroidChapter5Challenge">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="Dialog.Result" parent="Theme.BinarAndroidChapter5Challenge">
+        <item name="android:background">@drawable/bg_edit_text_rounded_black</item>
     </style>
 </resources>
